drv/EN-Network_Client_SDK_nix/EN-HCNetSDK_V4.1.7.2(for Linux)/incEn/HCNetSDK.h

typedef     unsigned int    DWORD;
typedef     unsigned short  WORD;
typedef     int            LONG;
typedef  	unsigned char	BYTE ;
typedef 	void* 			LPVOID;
typedef     unsigned int*  LPDWORD;
		typedef unsigned int HWND;
		typedef void* HWND;
//Time correction structure
typedef struct
{
    DWORD dwYear; 		    //Year
    DWORD dwMonth; 		    //Month
    DWORD dwDay; 		    //Day
    DWORD dwHour; 		    //Hour
    DWORD dwMinute; 		//Minute
    DWORD dwSecond; 		//Second
}NET_DVR_TIME,  *LPNET_DVR_TIME;
 

//NET_DVR_Login_V30 () 
typedef struct
{
    BYTE sSerialNumber[SERIALNO_LEN];    //SN
    BYTE byAlarmInPortNum; 		        //Number of Alarm input
    BYTE byAlarmOutPortNum; 		        //Number of Alarm Output
    BYTE byDiskNum; 						//Number of Hard Disk
    BYTE byDVRType; 						//DVR Type,  1: DVR 2: ATM DVR 3: DVS ......
    BYTE byChanNum; 						//Number of Analog Channel
    BYTE byStartChan; 			        //The first Channel No. E.g. DVS- 1, DVR- 1
    BYTE byAudioChanNum;                 //Number of Audio Channel
    BYTE byIPChanNum; 					//Maximum number of IP Channel  
    BYTE byZeroChanNum; 			//Zero channel encoding number//2010- 01- 16
    BYTE byMainProto; 			//Main stream transmission protocol 0- private,  1- rtsp
    BYTE bySubProto; 				//Sub stream transmission protocol 0- private,  1- rtsp
    BYTE bySupport;         //Ability, the 'AND' result by bit: 0- not support;  1- support
    //bySupport & 0x1,  smart search
    //bySupport & 0x2,  backup
    //bySupport & 0x4,  get compression configuration ability
    //bySupport & 0x8,  multi network adapter
    //bySupport & 0x10, support remote SADP
    //bySupport & 0x20  support Raid card
    // bySupport & 0x40 support IPSAN directory search
	BYTE bySupport1;        // Ability expand, the 'AND' result by bit: 0- not support;  1- support
							// bySupport1 & 0x1, support snmp v30
						    // bySupport1& 0x2，support distinguish download and playback
	                        //bySupport1 & 0x4, support deployment level
	                        //bySupport1 & 0x8, support vca alarm time extension 
							//bySupport1 & 0x10, support muti disks(more than 33)
	                        //bySupport1 & 0x20, support rtsp over http
    BYTE byRes1;
	WORD wDevType;              //device type
    BYTE byRes2[16];						
}NET_DVR_DEVICEINFO_V30,  *LPNET_DVR_DEVICEINFO_V30;
 

//SDK information (9000 added) 
typedef struct 
{
    DWORD dwTotalLoginNum; 		//current login user operation number
    DWORD dwTotalRealPlayNum; 	//current real play operation number
    DWORD dwTotalPlayBackNum; 	//current playback or download operation number
    DWORD dwTotalAlarmChanNum; 	//current alarm channel operation number
    DWORD dwTotalFormatNum; 		//current HDD format operation number
    DWORD dwTotalFileSearchNum; 	//current files search operation number
    DWORD dwTotalLogSearchNum; 	//current logs search operation number
    DWORD dwTotalSerialNum; 	    //current transparent series port operation number
    DWORD dwTotalUpgradeNum; 	//current upgrading operation number
    DWORD dwTotalVoiceComNum; 	//current network voice communication operation number
    DWORD dwTotalBroadCastNum; 	//current network broadcast voice communication operation number
    DWORD dwTotalListenNum; 	    //current net listen operation number
    DWORD dwEmailTestNum;        //current E- mail test operation number
    DWORD dwBackupNum;           //current backup  operation number
    DWORD dwTotalInquestUploadNum;  //current inquest upload operation number
    DWORD dwRes[6]; 
}NET_DVR_SDKSTATE,  *LPNET_DVR_SDKSTATE;
 

//SDK Ability Information  (9000 added) 
typedef struct 
{
    DWORD dwMaxLoginNum; 		//maximum login user operation number MAX_LOGIN_USERS
    DWORD dwMaxRealPlayNum; 		//maximum realplay operation number WATCH_NUM
    DWORD dwMaxPlayBackNum; 		//maximum playback or download operation number WATCH_NUM
    DWORD dwMaxAlarmChanNum; 	//maximum alarm channel operation number ALARM_NUM
    DWORD dwMaxFormatNum; 		//maximum HDD format operation number SERVER_NUM
    DWORD dwMaxFileSearchNum; 	//maximum files search operation number SERVER_NUM
    DWORD dwMaxLogSearchNum; 	//maximum logs search operation number SERVER_NUM
    DWORD dwMaxSerialNum; 	    //maximum transparent series port operation number SERVER_NUM
    DWORD dwMaxUpgradeNum; 	    //maximum current upgrading operation number SERVER_NUM
    DWORD dwMaxVoiceComNum; 		//maximum network voice communication operation number SERVER_NUM
    DWORD dwMaxBroadCastNum; 	//maximum network broadcast voice communication operation number MAX_CASTNUM
    DWORD dwRes[10]; 
}NET_DVR_SDKABL,  *LPNET_DVR_SDKABL;
 

//Record Parameters (9000) 
typedef struct 
{
    char sFileName[100]; //File Name
    NET_DVR_TIME struStartTime; //Start time of the file
    NET_DVR_TIME struStopTime; //End time of the file
    DWORD dwFileSize; //File size
    char sCardNum[32]; 
    BYTE byLocked; //9000 DVR supports this, 1- file is locked, 0- file is Normal
    BYTE byFileType;   //File Type:  0:  scheduled record,  1:  Motion detection,  2:  alarm record,  3:  motion detection| alarm,  4:  motion detection & alarm 5:  command trigger,  6:  manually record
	//9-VCA alarm,10-PIR alarm,11-wireless alarm,12-callhelp alarm,14-Intelligent Transportation
    BYTE byRes[2]; 
}NET_DVR_FINDDATA_V30,  *LPNET_DVR_FINDDATA_V30;
 


//Record Query Condition
typedef struct 
{
    LONG lChannel; //channel number
    DWORD dwFileType; /*file record mode: 0xff - all,  0 - scheduled record,  1 - Motion detection,  2 - alarm record,  3:  motion detection| alarm,  
	                                  4 - motion detection & alarm, 5 - command trigger,  6 - manually record,7-VCA record,10-PIR alarm,11-wireless alarm,12-callhelp alarm,13-motion|alarm|PIR|wireless|callhelp,14-Intelligent Transportation*/
    DWORD dwIsLocked; //whether file is locked,  0- normal;  1- locked;  0xff- all
    DWORD dwUseCardNo; //whether card no. is used
    BYTE sCardNumber[32]; //card no.
    NET_DVR_TIME struStartTime; //start time
    NET_DVR_TIME struStopTime; //end time
}NET_DVR_FILECOND,  *LPNET_DVR_FILECOND;
typedef struct tagNET_DVR_DESC_NODE
{ 
    int  iValue;            
    BYTE  byDescribe[DESC_LEN_32];  //description
    DWORD  dwFreeSpace;            //unit:Mbps
    BYTE  byRes[12]; 			  //Reserved  
}NET_DVR_DESC_NODE,  *LPNET_DVR_DESC_NODE;
 

typedef struct tagNET_DVR_DISKABILITY_LIST
{ 
    DWORD     dwSize;             //Structure length
    DWORD     dwNodeNum; 		 //ability node number
    NET_DVR_DESC_NODE  struDescNode[MAX_NODE_NUM];   //description  
}NET_DVR_DISKABILITY_LIST,  *LPNET_DVR_DISKABILITY_LIST;
/*************************************coder server end****************************/


/********************************SDK API definition*********************************/
NET_DVR_API BOOL __stdcall NET_DVR_Init();
NET_DVR_API BOOL __stdcall NET_DVR_Cleanup();
NET_DVR_API DWORD __stdcall NET_DVR_GetSDKVersion();
NET_DVR_API DWORD __stdcall NET_DVR_GetSDKBuildVersion();
NET_DVR_API LONG __stdcall NET_DVR_Login_V30(char *sDVRIP, WORD wDVRPort, char *sUserName, char *sPassword, LPNET_DVR_DEVICEINFO_V30 lpDeviceInfo);
NET_DVR_API BOOL __stdcall NET_DVR_Logout(LONG lUserID);
NET_DVR_API DWORD __stdcall NET_DVR_GetLastError();
NET_DVR_API LONG __stdcall NET_DVR_FindNextFile_V30(LONG lFindHandle, LPNET_DVR_FINDDATA_V30 lpFindData);
NET_DVR_API LONG __stdcall NET_DVR_FindFile_V30(LONG lUserID, LPNET_DVR_FILECOND pFindCond);
NET_DVR_API BOOL __stdcall NET_DVR_FindClose_V30(LONG lFindHandle);
NET_DVR_API LONG __stdcall NET_DVR_PlayBackByName(LONG lUserID,char *sPlayBackFileName, HWND hWnd);
NET_DVR_API BOOL __stdcall NET_DVR_PlayBackControl(LONG lPlayHandle,DWORD dwControlCode,DWORD dwInValue,DWORD *LPOutValue);
NET_DVR_API LONG __stdcall NET_DVR_GetFileByTime(LONG lUserID,LONG lChannel, LPNET_DVR_TIME lpStartTime, LPNET_DVR_TIME lpStopTime, char *sSavedFileName);
NET_DVR_API LONG __stdcall NET_DVR_GetDownloadPos(LONG lFileHandle);
//config parameter begin
NET_DVR_API BOOL __stdcall NET_DVR_GetDVRConfig(LONG lUserID, DWORD dwCommand,LONG lChannel, LPVOID lpOutBuffer, DWORD dwOutBufferSize, LPDWORD lpBytesReturned);
NET_DVR_API BOOL __stdcall NET_DVR_GetSDKState(LPNET_DVR_SDKSTATE pSDKState);
NET_DVR_API BOOL __stdcall NET_DVR_GetSDKAbility(LPNET_DVR_SDKABL pSDKAbl);
NET_DVR_API BOOL __stdcall NET_DVR_PlayBackControl_V40(LONG lPlayHandle,DWORD dwControlCode, LPVOID lpInBuffer = NULL, DWORD dwInLen = 0, LPVOID lpOutBuffer = NULL, DWORD *lpOutLen = NULL);
NET_DVR_API BOOL __stdcall NET_DVR_GetDiskList(LONG lUserID, LPNET_DVR_DISKABILITY_LIST lpDiskList);